tests/unit/default/syntax-error/122-add-fk-table.e.t
---- IN ----
+FK%child
---- OUT ----
---- ERR ----
syntax: expected `.` or `(` after `+FK%child` instead of EOL at position 9 - at line 1
---- EXIT ----
1
